# npm_scan

./: .gitignore  Cargo.toml  README.md  README.txt  build.ps1  build.rs  build.sh  embed_icon.rc  malicious_packages.json
src/: main.rs
