[package]
name = "rust_npm_scan"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
hostname = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }

# Dépendances spécifiques à Windows uniquement
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

# Build-deps spécifiques Windows
[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.5"
